# Intern_cpp_Boris

./: README.md
00_introducrion/: CMakeLists.txt  main.cpp
01_Templates/: CMakeLists.txt  cache.h  main.cpp
02_Json/: CMakeLists.txt  main.cpp
02_Json/manipulator_json/: CMakeList.txt  manipulator_json.cpp  manipulator_json.h
02_Json/test/: CMakeList.txt  test.cpp
06_Affine_Transformation/: CMakeList.txt  main.cpp
08_Microcontroller/: Microcontroller.pdsprj  info.txt  main.cpp
